--- a/css/estilo.css
+++ b/css/estilo.css
@@ -17,7 +17,9 @@ a:hover{
     color: #227115;
 }
 /* Logo */
-
+#logo h1{
+    float: left;
+}
 #logo a{
     width: 248px ;
     height: 21px;
@@ -54,3 +56,16 @@ header{
     nav ul li a:hover{
         border-bottom: 1px solid #535858;
     }
+
+    /* Principal */
+
+#conteudo{
+    width: 710px;
+    float: left;
+    background: green;
+}
+aside{
+    width: 350px;
+    float: right;
+    background: #ebe7dd;
+}
