--- a/css/estilo.css
+++ b/css/estilo.css
@@ -68,4 +68,64 @@ aside{
     width: 350px;
     float: right;
     background: #ebe7dd;
+    padding-bottom: 30px;
 }
+
+section#visita{
+    background: #cdc8b1;
+    padding: 10px 27px 27px 27px;
+    margin-top: 10px;
+}
+#galeria{
+    padding: 0 27px 0 27px;
+}
+ section#galeria img{
+     margin-left:2px;
+     margin-top:3px ;
+}
+
+section#galeria a{
+    display: block;
+    background: url(../imagens/fundo-foto.png) no-repeat;
+    float: left;
+    padding: 17px 15px 17px 15px;
+    margin: 10px 0 0 20px;
+}
+
+h4{
+    color: #86521a;
+    text-transform: uppercase;
+    padding-bottom: 3px;
+    margin-bottom: 0;
+}
+
+/* Fomulários */
+input{
+    height: 20px;
+    width: 80px;
+    background: #fff;
+    border: none;
+    font-size: 1em;
+}
+input.campo{
+     border: 1px solid #ada484;
+     
+ }
+
+input.botao{
+    background-color: #9b9271;
+    color: white;
+    width: 100%;
+    height: 40px;
+    font-size: 1.2em;   
+}
+
+fieldset{
+    border: none;
+}
+
+legend{
+    display: none;
+}
+
+/*  */
